--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-linear-gradient": "~12.1.2",
     "expo-screen-orientation": "^5.1.1",
     "expo-splash-screen": "~0.18.2",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
