--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "expo": "~48.0.18",
     "expo-blur": "~12.2.2",
     "expo-brightness": "~11.2.1",
+    "expo-file-system": "^15.2.2",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-screen-orientation": "^5.1.1",
+    "expo-sharing": "^11.2.2",
     "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
