--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/elements": "^1.3.18",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "blurhash": "^2.0.5",
     "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-blur": "~12.2.2",
     "expo-brightness": "~11.2.1",
     "expo-file-system": "^15.2.2",
